# veil

./: .gitignore  Cargo.toml  build.rs  components.toml  spatial_hash.toml
crates/game_data/: Cargo.toml
crates/game_data/src/: lib.rs
crates/game_data/src/content/: action_type.rs  actions.rs  behaviour_type.rs  complex_tile.rs  overlay_type.rs  rain.rs  tile_type.rs  water.rs
crates/game_data/src/entity_store/: migration.rs  mod.rs
crates/game_data/src/spatial_hash/: macros.hbs.rs  mod.rs
crates/game_policy/: Cargo.toml
crates/game_policy/src/: commit.rs  frame.rs  game_env.rs  input.rs  launch.rs  lib.rs  meta_action.rs  npc_act.rs  player_act.rs  player_render.rs  policy.rs  reaction.rs  renderer.rs  tile.rs  tile_buffer.rs  tile_desc.rs
crates/game_policy/src/behaviour/: attack.rs  env.rs  mod.rs  patrol.rs
crates/game_policy/src/knowledge/: knowledge_grid.rs  mod.rs
crates/game_policy/src/observation/: shadowcast.rs
crates/game_policy/src/terrain/: common.rs  example_coast.rs  mod.rs  string_demo.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: lib.rs  perlin.rs  straight_line.rs
crates/geometry/src/grid/: mod.rs
crates/glutin_frontend/: Cargo.toml
crates/glutin_frontend/src/: frontend.rs  input.rs  launcher.rs  lib.rs  overlay_tile.rs  sizes.rs  tile_map.rs  world_tile.rs
crates/glutin_frontend/src/shaders/: shdr_330.vert  shdr_overlay_330.frag  shdr_world_330.frag
crates/util/: Cargo.toml
crates/util/src/: lib.rs  schedule.rs
res_src/: components.toml  spatial_hash.toml  tiles.toml
resources/: spatial_hash.toml  tiles.toml
src/: best.rs  commit.rs  common_input.rs  coord.rs  direction.rs  entity_id_allocator.rs  entity_observe.rs  frame.rs  game_env.rs  input.rs  into_coord.rs  launch.rs  level_env.rs  limits.rs  main.rs  meta_action.rs  npc_act.rs  perlin.rs  player_act.rs  player_render.rs  policy.rs  reaction.rs  rect.rs  render_overlay.rs  renderer.rs  resource_file.rs  resources.rs  schedule.rs  simple_file.rs  straight_line.rs  tile.rs  tile_buffer.rs  tile_desc.rs  turn.rs  veil_state.rs
src/behaviour/: attack.rs  env.rs  mod.rs  patrol.rs  state.rs
src/content/: action_type.rs  actions.rs  complex_tile.rs  mod.rs  overlay_type.rs  prototypes.rs  tile.rs  tile_type.rs  veil_step_info.rs  water.rs
src/entity_store/: migration.rs  mod.rs  post_change.rs  template.rs.hbs
src/glutin_frontend/: common.rs  frontend.rs  input.rs  launcher.rs  mod.rs  overlay_tile.rs  renderer_pipelines.rs  scale.rs  sizes.rs  tile_map.rs  types.rs  world_tile.rs
src/glutin_frontend/shaders/: shdr_150.frag  shdr_150.vert  shdr_330.frag  shdr_330.vert  shdr_scale_330.frag  shdr_scale_330.vert  shdr_world_330.frag
src/grid/: mod.rs  static_grid.rs
src/grid_search/: mod.rs
src/knowledge/: knowledge_grid.rs  mod.rs  player_knowledge.rs
src/observation/: metadata.rs  mod.rs  omniscient.rs  shadowcast.rs  square.rs
src/res/: tiles.toml
src/sdl2_frontend/: commit.rs  input.rs  launcher.rs  mod.rs  npc_act.rs  player_act.rs  player_render.rs  player_turn.rs  rect.rs  renderer.rs  renderer_dimensions.rs  renderer_env.rs  renderer_internal.rs  textures.rs  tile.rs  tile_buffer.rs  turn.rs
src/spatial_hash/: coord.rs  generated_component_list_macros.rs  mod.rs  template.rs.hbs
src/terrain/: example_coast.rs  metadata.rs  mod.rs  string_demo.rs
src/tests/: entity_store.rs  limits.rs  mod.rs  perlin.rs  schedule.rs  spatial_hash.rs  static_grid.rs  straight_line.rs  veil_state.rs
