[package]
name = "veil"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
build = "build.rs"

[dependencies]
util = { path = "crates/util" }
geometry = { path = "crates/geometry" }
game_data = { path = "crates/game_data" }
game_policy = { path = "crates/game_policy" }
glutin_frontend = { path = "crates/glutin_frontend" }
rand = "0.3"
cgmath = { version = "0.14", features = ["eders"] }

[build-dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
handlebars = "0.26"
image = "0.14"

[replace]
"image:0.14.0" = { git = "https://github.com/stevebob/image.git", branch = "resize-fixes" }
"winit:0.6.4" = { git = "https://github.com/stevebob/winit.git", branch = "x11-hidpi-fix" }
"glutin:0.8.1" = { git = "https://github.com/stevebob/glutin.git", branch = "winit-0.6.4" }
