[package]
name = "glutin_frontend"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]

[dependencies]
util = { path = "../util" }
geometry = { path = "../geometry" }
game_data = { path = "../game_data" }
game_policy = { path = "../game_policy" }
handlebars = "0.26"
cgmath = { version = "0.14", features = ["eders"] }
toml = "0.4"
maplit = "0.1.4"
gfx = "0.16"
gfx_window_glutin = "0.16.0"
gfx_device_gl = "0.14.1"
glutin = "0.8.1"
winit = "0.6.4"
gfx_text = "0.17"
genmesh = "0.5"
image = "0.14"

[replace]
"winit:0.6.4" = { git = "https://github.com/stevebob/winit.git", branch = "x11-hidpi-fix" }
"glutin:0.8.1" = { git = "https://github.com/stevebob/glutin.git", branch = "winit-0.6.4" }
